--- a/project/vipinstagram/faq/id/index.html
+++ b/project/vipinstagram/faq/id/index.html
@@ -15,6 +15,7 @@
   <link rel="canonical" href="/project/vipinstagram/faq/id" />
   <link rel="revision" href="/project/vipinstagram/faq/id" />
   <title>FAQ | gaus</title>
+  <style>@media screen and (max-width: 1025px) {.page__title {visibility: hidden; position: absolute;}}</style>
 </head>
 
 <body class="layout-no-sidebars path-node page-node-type-page">
