--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -15,6 +15,7 @@
   <link rel="canonical" href="/project/vipinstagram/faq" />
   <link rel="revision" href="/project/vipinstagram/faq" />
   <title>FAQ | gaus</title>
+  <style>@media screen and (max-width: 1025px) {.page__title {visibility: hidden; position: absolute;}}</style>
 </head>
 
 <body class="layout-no-sidebars path-node page-node-type-page">
@@ -65,7 +66,7 @@
                           <hr>
                         </p>
                         <p><b>Instagram scraping requirements?</b><br>
-                          - Currently only works for profile pages with small thumbnails, not those with large images. Although scraping /tags, or /explore pages is doable, we\'ll postpone this feature till enough requests. <br>- Strong internet
+                          - Currently only works for profile pages with small thumbnails, not those with large images. Although scraping /tags, or /explore pages is doable, we'll postpone this feature till enough requests. <br>- Strong internet
                           connection. <br>- Large size of device external storage (30gb+ to play safe), else you will be locked down due to out of space exception. Do not panic, though. Just hit <b>Abort</b>. Manage your space, move or delete files.
                           Switch or plug in a new empty card. Be sure to select it via <b>Organize directories</b>.
                           <hr>
@@ -80,7 +81,7 @@
                           <hr>
                         </p>
                         <p><b>I forgot my PIN. How to reset?</b><br>
-                          Please note the PIN. Visit Android system settings (<b>Settings > Apps > VIP Downloader > Storage > Clear data</b>). This app\'s data will be lost like first install. Your downloaded photos and videos are safe at the
+                          Please note the PIN. Visit Android system settings (<b>Settings > Apps > VIP Downloader > Storage > Clear data</b>). This app's data will be lost like first install. Your downloaded photos and videos are safe at the
                           above-mentioned storage, but no longer accessible by this app. In order to have a functional app again with the old data, rebuild database based on your database backup at runtime. Visit <b>Settings > Database > Rebuild
                             database</b>. This app should be functional again.
                           <hr>
@@ -96,7 +97,7 @@
                         </p>
                         <p><b>Some features not functioning?</b><br>
                           Visit Android <b>Settings > Apps > VIP Downloader > Permissions</b>, or visit <b>Settings > Permissions</b> for a shortcut. Check the 3 dot menu on the top right to view <b>All permissions</b>. Enable the needed permissions.
-                          Anything disabled will not function. Restart the app! Don\'t be scared by descriptions unless you distrust the app developer. VIP Downloader is harmless regardless of spooky descriptions. Please note, sideloading is not
+                          Anything disabled will not function. Restart the app! Don't be scared by descriptions unless you distrust the app developer. VIP Downloader is harmless regardless of spooky descriptions. Please note, sideloading is not
                           supported as we use the new upload format using App bundle, not regular APK. Only install via Google Play Store!
                           <hr>
                         </p>
@@ -130,8 +131,8 @@
                           <hr>
                         </p>
                         <p><b>Have questions, suggestions, bug reports, or feedback?</b><br>
-                          We love to hear from you! Please use the <b>Feedback</b>, and rate our app. Any bitter, yet constructive, criticism will help us gain some strength to continue. <i>One of your life purposes is to help others. If you can\'t
-                            help people, at least don\'t hurt them</i>, says Dalai Lama. Thank you!
+                          We love to hear from you! Please use the <b>Feedback</b>, and rate our app. Any bitter, yet constructive, criticism will help us gain some strength to continue. <i>One of your life purposes is to help others. If you can't
+                            help people, at least don't hurt them</i>, says Dalai Lama. Thank you!
                           <hr>
                         </p>
                         <p><b>Tips!</b><br>
