--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -15,6 +15,7 @@
   <link rel="canonical" href="/privacy-policy" />
   <link rel="revision" href="/privacy-policy" />
   <title>Privacy Policy | gaus</title>
+  <style>@media screen and (max-width: 1025px) {.page__title {visibility: hidden; position: absolute;}}</style>
 </head>
 
 <body class="layout-no-sidebars has-featured-top path-privacy-policy path-node page-node-type-page">
