--- a/project/vipinstagram/faq/id/index.html
+++ b/project/vipinstagram/faq/id/index.html
@@ -54,6 +54,13 @@
                           diminta. Jika tidak, percuma.
                           <hr>
                         </p>
+                        <p><b>Beda gerbang Privat dan Publik?</b><br>
+                          <b>Privat</b>:
+                          <ul><li>harus login via aplikasi guna bisa mengakses akun private dan public.</li><li>hanya bisa memakai tampilan web yang disediakan aplikasi.</li><li>Bisa unduh dimana saja cukup dengan pijit lama pada gambar kecil. Atau pijit ikon <b>Bookmark</b> di laman penuh. Atau pencet <b>Salin tautan</b> pada akun publik.</li><li>Bisa skrap akun privat atau publik.</li></ul>
+                          <b>Publik</b>:
+                          <ul><li>tidak harus login via aplikasi, hanya bisa akses akun publik.</li><li>Bisa memakai aplikasi Instagram atau browser bebas.</li><li>Hanya bisa unduh lewat <b>Salin tautan</b> pada akun publik</li><li>Tidak bisa skrap.</li></ul>
+                          <hr>
+                        </p>
                         <p><b>Cara unduh media dari akun privat?</b><br>
                           <b>Dua cara:</b><br> 1. Tekan lama pada gambar (seperti pada laman /explore, /tags, /search atau profile, pokoknya yang ada gambar kecil) guna menyimpan media. Aplikasi akan mengunduh bila mendetekeksi tekanan tertahan. <br>2. Masuk laman
                           penuh, pijit tombol unduhan yang disediakan. Harus login dulu agar aplikasi bisa melihat yang Anda lihat tanpa otorisasi khusus. Aplikasi ini tidak membaca, tidak tahu, tidak menyimpan, juga tidak peduli perihal akun atau
@@ -68,6 +75,27 @@
                         <p><b>Persyaratan Skraping?</b><br>
                           - Halaman profil berisi gambar kecil, bukan laman berisi gambar besar. <br>- Koneksi internet kuat. <br>- Ruang penyimpanan besar (30gb+ amanya). Jika minim, bisa error kekurangan ruang. Jangan panik.
                             Pijit <b>Abort</b>. Atur ruang, pindah dan hapus berkas. Ganti atau masukkan kartu memori kosong. Pastikan dipilih via tombol <b>Atur folder</b>.
+                          <hr>
+                        </p>
+                        <p><b>Apakah skraping aman buat akun?</b><br>
+                          Tidak. Barang terlarang. Tanggung sendiri akibatnya. Anda sudah diperingatkan sebelum skraping, siap-siap kena ban. Jika tak siap, dan tidak tahu cara bermain cantik, jangan tergoda. Langkah-langkah antisipatif sudah dilakukan guna mengurangi
+                          pemicu algoritme banning seperti bikin laku lajak manusia, mengurangi pembatasan kerapatan permintaan, UA dan cookie yang persistent, dsb. Tidak ada jaminan sama sekali.
+                          <hr>
+                        </p>
+                        <p><b>Apa maksud <i>bermain cantik<i>?</b><br>
+                          Skraping adalah perilaku bot, bukan manusia. Bot banyak diban.
+                          <b>Main cantik:</b>
+                          <ul>
+                            <li>Laku lajak manusia. Klik, buka, tutup, balik, turun, naik. Laku lajak bot, melakukan satu tugas berulang-ulang. Jangan unduh terlalu banyak. Jangan suka terlalu banyak. Apapun yang diawali terlalu itu tidak baik, termasuk terlalu baik.</li>
+                            <li>Stop downloading anything when reaching 300 per 24 hour. You will be prompted a number when scraping.</li>
+                            <li>Only scrap 100 at most at a time. You can rescan and rescrap the rest tomorrow.</li>
+                            <li>Have backup accounts, many.</li>
+                            <li>Anything against the above is not safe at all. You had been warned. Do trials and errors at your own descretion.</li>
+                          </ul>
+                          <hr>
+                        </p>
+                        <p><b>Apa guna <i>Atur berkas penyimpanan<i>?</b><br>
+                          Untuk mengorganisir foto dan video berdasarkan tema guna kenyamanan offline. Terutama untuk menyimpan data pada lokasi penyimpanan external yang bisa diganti/ pasang ulang demi ruang lebih besar daripada penyimpanan internal.
                           <hr>
                         </p>
                         <p><b>Aplikasi tidak berfungsi kalo SD card dicabut?</b><br>
