--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -56,10 +56,10 @@
                         </p>
                         <p><b>Private and Public gates differences?</b><br>
                           <b>Private</b>:
-                          <ul><li>requires login via app to access both private and public accounts.</li><li>can only use the web interface provided by the app.</li><li>Can download anywhere by long pressing thumbnails. Or press the Instagram <b>Bookmark</b> icon at full page. Or hit Instagram <b>Copy link</b> like seen at public accounts</li><li>Can scrape both private or public accounts.</li></ul>
+                          <ul><li>requires login via app to access both private and public accounts.</li><li>can only use the web interface provided by the app.</li><li>can download anywhere by long pressing thumbnails. Or press the Instagram <b>Bookmark</b> icon at full page. Or hit Instagram <b>Copy link</b> like seen at public accounts</li><li>can scrape both private or public accounts.</li></ul>
                           <b>Public</b>:
                           <ul><li>doesn't require a login via this app to access public or private accounts.</li><li>can use Instagram app, or browsers.</li><li>can only download via Instagram <b>Copy link</b> at public or private accounts</li><li>can not scrape.</b></li></ul>
-                          Due to the latest restrictions, you must supply your nothing-to-lose Instagram account credentials via <b>Settings > Private mode</b> in order to make it work for both public and private accounts. No need to be the same as the currently-in-use Instagram account, except for private accounts (at least both accounts should follow the same private account).
+                          Due to the latest restrictions, you must supply your nothing-to-lose Instagram account credentials via <b>Settings > Private mode</b> in order to make it work for both public and private accounts. No need to be the same as the currently-in-use Instagram account, except for private accounts (at least both accounts should follow the same private accounts).
                           <hr>
                         </p>
                         <p><b>How does downloading private account media work?</b><br>
@@ -85,7 +85,7 @@
                           <hr>
                         </p>
                         <p><b>Can I navigate away while scraping?</b><br>
-                          Yes, scraping is conducted at another thread. Not your main UI thread. But that mean you are doing several things simultaneously which immediately smell like human bot behaviors. Staying tuned till all downloads are finished is recommended unless you provide different accounts via <b>Settings > Private mode</b>.
+                          Yes, as long as the app web interface displaying Instagram is opened. Scraping is conducted at another thread. Not your main UI thread. But that means you are doing several things simultaneously which immediately smell like human bot behaviors. Staying tuned till all downloads are finished is recommended unless you provide different accounts via <b>Settings > Private mode</b>.
                           <hr>
                         </p>
                         <p><b>What does <i>play safe</i> mean?</b><br>
@@ -161,6 +161,19 @@
                         <p><b>Have questions, suggestions, bug reports, or feedback?</b><br>
                           We love to hear from you! Please use the <b>Feedback</b>, and rate our app. Any bitter, yet constructive, criticism will help us gain some strength to continue. <i>One of your life purposes is to help others. If you can't
                             help people, at least don't hurt them</i>, says Dalai Lama. Thank you!
+                          <hr>
+                        </p>
+                        <p><b>Why scraping not work?</b><br>
+                          Only applicable to FREE version. Before scraping you will be presented a video ad. A minimum 32 seconds threshold and 10 points is required before you close it. If you close it too early, scraping is not triggered.
+                          <hr>
+                        </p>
+                        <p><b>How does the reward or point system work?</b><br>
+                          Only applicable to FREE version to minimize ads interruptions. Everytime you watch a video ad after a minimum 32 seconds threshold, you will recieve 10 points. If you close the video before the threshold 32 seconds, you will get 0. Each download costs you 1 point, so 1 point equals to 1 download at regular one-at-a-time download. But scraping is different, it can download 100 items once, and you can only start downloading once you have 10 points, not 100, as long as you meet 32 seconds threshold. That is one of the obvious advantages of the rewards, or points system.
+                          <hr>
+                        </p>
+                        <p><b>What are differences between FREE and PRO versions?</b><br>
+                         Aside from ads, below are a few differences:
+                          <ol><li><b>FREE:</b> Scraper will be aborted if you put the app into background/ overview. <b>PRO:</b> Scraper persists till finished as long as the app browser is open, not destroyed.</li><li><b>FREE:</b> Scraper will start at 32 seconds threshold after watching video and earning a minimum 10 points. <b>PRO:</b> Scraper starts immediately.</li></ol>
                           <hr>
                         </p>
                         <p><b>Tips!</b><br>
