--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -115,18 +115,15 @@
                           <hr>
                         </p>
                         <p><b>I purchase the pro version. How to migrate old data into new app?</b><br>
-                          Visit <b>Settings > Database > Migrate database</b>. The old data should be re-imported into the new app.
+                          Visit <b>Settings > Database > Migrate database</b>. The old data should be re-imported into the new app. Be sure to backup the free version beforehand.
                           <hr>
                         </p>
                         <p><b>I rebuilt database, succeeded, but see no images/ videos?</b><br>
-                          Be sure to re-open any directories you initially chose (any which contains <b>VIPDownloader</b> directory) via <b>Organize Directories</b> button or visit <b>Settings > Storage > Organize Directories</b>. Basically you must
-                          re-grant access to the app if you reset the app data, or migrate from free to pro. You should see the images/ videos again.
+                          Be sure to re-open any directories you initially chose (any which contains <b>VIPDownloader</b> directory) via <b>Organize Directories</b> button or visit <b>Settings > Storage > Organize Directories</b>. Basically you must re-grant access to the app if you reset the app data, or migrate from free to pro. You should see the images/ videos again. The reason is each flavor is unique in regards of permissions, even if the difference is just free and pro.
                           <hr>
                         </p>
-                        <p><b>Some features not functioning?</b><br>
-                          Visit Android <b>Settings > Apps > VIP Downloader > Permissions</b>, or visit <b>Settings > Permissions</b> for a shortcut. Check the 3 dot menu on the top right to view <b>All permissions</b>. Enable the needed permissions.
-                          Anything disabled will not function. Restart the app! Don't be scared by descriptions unless you distrust the app developer. VIP Downloader is harmless regardless of spooky descriptions. Please note, sideloading is not
-                          supported as we use the new upload format using App bundle, not regular APK. Only install via Google Play Store!
+                        <p><b>Some features are not functioning?</b><br>
+                          Visit Android <b>Settings > Apps > VIP Downloader > Permissions</b>, or visit <b>Settings > Permissions</b> for a shortcut. Check the 3 dot menu on the top right to view <b>All permissions</b>. Enable the needed permissions. Anything disabled will not function. Restart the app! Don't be scared by descriptions unless you distrust the app developer. VIP Downloader is harmless regardless of spooky descriptions. Please note, sideloading is not supported as we use the new upload format using App bundle, not regular APK. Only install via Google Play Store!
                           <hr>
                         </p>
                         <p><b>Sometimes I get pictures and videos downloaded real fast, sometimes slow?</b><br>
@@ -134,7 +131,7 @@
                           <hr>
                         </p>
                         <p><b>How to repost videos or pictures?</b><br>
-                          Tap any thumbnail to open the gallery display. Find a button with a plus (+) sign, and tap <b>Regram/ repost</b> button. Be sure to give credit to owners, and seek for their permissions.
+                          Tap any thumbnail to open the gallery display. Find a button with a plus (+) sign, and tap <b>Regram/ repost</b> button. Be sure to give credit to owners, and seek for their permissions. Or provide watermark as a credit in the least.
                           <hr>
                         </p>
                         <p><b>Nothing downloaded?</b><br>
@@ -167,13 +164,17 @@
                           Only applicable to FREE version. Before scraping you will be presented a video ad. A minimum 32 seconds threshold and 10 points is required before you close it. If you close it too early, scraping is not triggered.
                           <hr>
                         </p>
+                        <p><b>Does video watermark work?</b><br>
+                          No. I haven't spent more time to remove that option due to a mix of videos and images. Please ignore for videos.
+                          <hr>
+                        </p>
                         <p><b>How does the reward or point system work?</b><br>
-                          Only applicable to FREE version to minimize ads interruptions. Everytime you watch a video ad after a minimum 32 seconds threshold, you will recieve 10 points. If you close the video before the threshold 32 seconds, you will get 0. Each download costs you 1 point, so 1 point equals to 1 download at regular one-at-a-time download. But scraping is different, it can download 100 items once, and you can only start downloading once you have 10 points, not 100, as long as you meet 32 seconds threshold. That is one of the obvious advantages of the rewards, or points system.
+                          Only applicable to FREE version to minimize ads interruptions. Everytime you watch a video ad after a minimum 32 seconds threshold, you will recieve 10 points. If you close the video before the threshold 32 seconds, you will get 0. Each download costs you 1 point, so 1 point equals to 1 download at regular one-at-a-time download. But scraping is different, it can download 100 items once, and you can only start downloading once you have 10 points, not 100, as long as you meet 32 seconds threshold. If you can keep your points above 100, no ads (banner or fullscreen ones) will be shown. That is one of the obvious advantages of the rewards, or points system.
                           <hr>
                         </p>
                         <p><b>What are differences between FREE and PRO versions?</b><br>
                          Aside from ads, below are a few differences:
-                          <ol><li><b>FREE:</b> Scraper will be aborted if you put the app into background/ overview. <b>PRO:</b> Scraper persists till finished as long as the app browser is open, not destroyed.</li><li><b>FREE:</b> Scraper will start at 32 seconds threshold after watching video and earning a minimum 10 points. <b>PRO:</b> Scraper starts immediately.</li></ol>
+                          <ol><li><b>FREE:</b> Scraper will be aborted if you put the app into background/ overview. <br><b>PRO:</b> Scraper persists till finished as long as the app browser is open, not destroyed.</li><li><b>FREE:</b> Scraper will start at 32 seconds threshold after watching video and earning a minimum 10 points. <br><b>PRO:</b> Scraper starts immediately.</li></ol>
                           <hr>
                         </p>
                         <p><b>Tips!</b><br>
