--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -165,12 +165,12 @@
                           <hr>
                         </p>
                         <p><b>How does the reward or point system work?</b><br>
-                          Only applicable to FREE version to minimize ads interruptions. Everytime you watch a video ad after a minimum 32 seconds threshold, you will recieve 10 points. If you close the video before the threshold 32 seconds, you will get 0. Each download costs you 1 point, so 1 point equals to 1 download at regular one-at-a-time download. But scraping is different, it can download 100 items once, and you can only start downloading once you have 10 points, not 100, as long as you meet 32 seconds threshold. If you can keep your points above 100, no ads (banner or fullscreen ones) will be shown. That is one of the obvious advantages of the rewards, or points system.
+                          Only applicable to FREE version to minimize ads interruptions. Tap the top-right corner reward icon. Everytime you watch a video ad after a minimum 32 seconds threshold met, you will earn 10 points. If you close the video before the threshold 32 seconds, you will get 0. Each download costs you 1 point, so 1 point equals to 1 download at regular one-at-a-time download. But scraping is different, it can download 100 or 300 items at once, and you can only start downloading once you have 10 points, not 100, as long as you meet 32 seconds threshold. If you can keep your points above 100, no ads (banner or fullscreen ones) will be shown. That is one of the obvious advantages of the rewards, or points system. Shortly, when you have free time to be interrupted, be sure to keep earning points so that when you don't want interruptions, you are totally free of them.
                           <hr>
                         </p>
                         <p><b>What are differences between FREE and PRO versions?</b><br>
                          Aside from ads, below are a few differences:
-                          <ol><li><b>FREE:</b> Scraper will be aborted if you put the app into background/ overview. <br><b>PRO:</b> Scraper persists till finished as long as the app browser is open, not destroyed.</li><li><b>FREE:</b> Scraper will start at 32 seconds threshold after watching video and earning a minimum 10 points. <br><b>PRO:</b> Scraper starts immediately.</li></ol>
+                          <ol><li><b>FREE:</b> Browser will be killed if you put the app into background/ overview. <br><b>PRO:</b> Browser persists as long as the app is open, not destroyed.</li><li><b>FREE:</b> Scraper will start at 32 seconds threshold after watching video and earning a minimum 10 points. <br><b>PRO:</b> Scraper starts immediately.</li></ol>
                           <hr>
                         </p>
                         <p><b>Have questions, suggestions, bug reports, or feedback?</b><br>
